--- a/style.css
+++ b/style.css
@@ -1,20 +1,23 @@
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   background: linear-gradient(to right, #ef32d9, #89fffd);
+  font-size: 1.5rem;
 }
 
 button {
-  padding: 4px;
+  padding: 10px;
   background-color: #acb8f1;
   border-radius: 5px;
   border: 1px solid #4e7e82;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  font-size: 1rem;
 }
 
 input {
   background-color: transparent;
   border: 1px solid #175d63;
   border-radius: 5px;
+  padding: 7px;
 }
 
 .content {
@@ -22,6 +25,7 @@ input {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 50px;
 }
 
 .button-wrapper {
